# Reso-Source-Sample

./: README.md  Reso Files  build.sh  pyproject.toml  reso_demo.py  reso_parser.py
reso_forge_sample.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
results/demo/: ising_sample_stats.txt  ising_samples.npy
results/final-check/: ising_sample_stats.txt  ising_samples.npy
results/reso-test/: ising_sample_stats.txt  ising_samples.npy
tests/: test_reso_demo.py  test_reso_parser.py
