[project]
name = "reso-forge-sample"
version = "0.1.0"
description = "A Reso/THRML-inspired demo scaffold for thermodynamic AI modeling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.5"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
reso-demo = "reso_demo:main"

[tool.setuptools]
py-modules = ["reso_demo", "reso_parser"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
